Fix overflow on zoom for extra long links and text

--- a/themes/navsite/static/css/style.css
+++ b/themes/navsite/static/css/style.css
@@ -460,13 +460,18 @@ aside.pubdate {
     color: #777;
 }
 
-#blog code {
-    display: inline-block;
-    white-space: normal;
-    max-width:100%;
+#blog {
     word-break:break-all;
     word-wrap:break-word;
 }
+
+#blog code, p, a {
+    display: inline-block;
+    white-space: normal;
+    max-width:100%;
+}
+
+
 
 #blog img {
     max-width: 100%;
